--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "lint:sol": "solhint 'contracts/**/*.sol'",
     "type-check": "tsc --noEmit"
   },
+  "overrides": {
+    "multer": "^2.0.1",
+    "cookie": "^0.7.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "@nestjs/cli": "^10.4.7",
@@ -56,7 +60,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^9.0.0",
     "eslint-plugin-node": "^11.1.0",
-    "hardhat": "^2.19.0",
+    "hardhat": "^2.24.2",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
     "jest": "^29.7.0",
@@ -80,6 +84,7 @@
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
     "@openzeppelin/contracts": "^5.0.1",
+    "@sentry/node": "^9.26.0",
     "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -87,6 +92,7 @@
     "fp-ts": "^2.16.10",
     "graphql": "^16.11.0",
     "ioredis": "^5.6.1",
+    "multer": "^2.0.1",
     "nestjs-typeorm-paginate": "^4.1.0",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.1.14",
